Fixed mobile spacing on contact page and finalized email form routing for each page.

--- a/css/about.css
+++ b/css/about.css
@@ -773,7 +773,7 @@ body {
   top: 0;
   font-family: "Space Grotesk", sans-serif;
   font-size: 9rem;
-  font-weight: 600;
+  font-weight: 500;
   color: #EDEDED;
   line-height: 1;
   z-index: 0;
