--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -437,8 +437,18 @@ position: fixed;
     width: 720px;
     max-width: 900px;
     height: 650px;
+    padding-top: 60px;
     overflow: hidden;
 }
+.hero-carouse-inner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
 .hero-carousel img {
     width: 100%;
     height: 100%;
@@ -542,25 +552,36 @@ position: fixed;
     width: 100%;
 }
 
+.contact-form textarea {
+    resize: none;
+}
+
 .contact-form label {
-    font-size: 0.95rem;
+    font-size: 1rem;
     font-weight: 500;
     margin-bottom: 5px;
 }
 
 .contact-form button {
-    background-color: #000;
-    color: #fff;
-    padding: 15px 30px;
-    border: none;
+    color: #000;
+    background: transparent;
+    font-family: "Inter", sans-serif;
     font-size: 1rem;
+    font-weight: 400;
+    margin-top: 15px;
     cursor: pointer;
-    transition: 0.3s ease-in-out;
+    border: 1px solid #000;
+    padding: 12px 20px;
+    transition: color 0.25s ease-in-out;
+    float: right;
     text-transform: uppercase;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 }
 
 .contact-form button:hover {
-    background-color: #333;
+    background: black;
+    color: #fff;
+    border: 1px solid #000;
 }
 
 .form-group {
@@ -800,6 +821,17 @@ footer {
         margin-top: 0;
     }
 
+    /*--- Contact Form Section Styles ---*/
+    .contact-form-section {
+        flex-direction: column-reverse;
+    }
+    .form-container {
+        padding-top: 30px;
+    }
+    .noble-benefits-grid {
+        margin-top: 30px;
+    }
+
 }
 
 
@@ -907,6 +939,7 @@ footer {
 /*--- Contact Items Section Styles ---*/
 #contact-items-section {
     margin: 0;
+    padding-bottom: 30px;
 }
 .contact-items {
     flex-direction: column;
@@ -926,7 +959,6 @@ footer {
 }
 .form-container h3 {
     font-size: 1.75rem;
-    margin-top: 30px;
 }
 .form-container .text2 {
     padding-bottom: 60px;
