--- a/css/index.css
+++ b/css/index.css
@@ -1396,7 +1396,7 @@ sl-details p {
 }
 
 .social-icons a:hover {
-    color: #bdbdbd;
+    color: #999;
 }
 
 /* Right Side - Form */
