--- a/css/webdesign.css
+++ b/css/webdesign.css
@@ -749,7 +749,7 @@ position: fixed;
     top: 0;
     font-family: "Space Grotesk", sans-serif;
     font-size: 11rem;
-    font-weight: 600;
+    font-weight: 500;
     color: #EDEDED;
     line-height: 1;
     z-index: 0;
@@ -963,14 +963,16 @@ textarea {
     color: #000;
     background: transparent;
     font-family: "Inter", sans-serif;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 400;
     margin-top: 15px;
     cursor: pointer;
     border: 1px solid #000;
     padding: 12px 20px;
     transition: color 0.25s ease-in-out;
-    max-width: 25%;
-    float: right;
+    max-width: 33%;
+    display: block;
+    margin: 15px auto 0 auto;
     text-transform: uppercase;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 }
